--- a/index.html
+++ b/index.html
@@ -4,9 +4,150 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="/style.css" />
     <title>Document</title>
   </head>
   <body>
-    <p>Hello</p>
+    <div id="navpc" class="fixed-top">
+      <div class="container">
+        <div class="row">
+          <div class="col-4">
+            <img src="/img/guido_logo.svg" id="navlogo" alt="" />
+          </div>
+          <div class="col-8">
+            <div class="row">
+              <div class="col-9">
+                <div id="navmenubox" class="rounded-pill text-center">
+                  <div class="mx-auto">
+                    <button class="mx-3 btn text-white" id="navitem">
+                      Behavioural psychology
+                    </button>
+                    <button class="mx-3 btn text-white" id="navitem">
+                      Product 1
+                    </button>
+                    <button class="mx-3 btn text-white" id="navitem">
+                      Support
+                    </button>
+                  </div>
+                </div>
+              </div>
+              <div class="col-3">
+                <div class="w-100 rounded-pill text-center" id="navjoinbtn">
+                  <a class="btn" href="" id="joinusnav">Join us Today</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div id="navpc"></div>
+    <div id="advice">
+      <div class="container">
+        <p id="adviceText">
+          Not investing in health today cuts into your future profit : that is
+          how compounding works 😎
+        </p>
+      </div>
+    </div>
+    <div id="landing">
+      <br />
+      <br />
+
+      <div class="row px-2">
+        <div class="col-6" id="landingLeft">
+          <img class="" style="width: 260px" src="/img/guido_logo.svg" alt="" />
+          <p
+            style="
+              font-size: 22px;
+              width: 84%;
+              font-weight: 400;
+              color: #747474;
+            "
+          >
+            Guido is a healthy lifestyle program that Just Fits with your
+            current lifestyle. It is the small incremental changes that we
+            belive makes the largest differece in the long term.
+          </p>
+          <p
+            style="
+              font-size: 22px;
+              width: 84%;
+              font-weight: 400;
+              color: #000000;
+            "
+          >
+            Invest in your health with us: Happy Investing
+          </p>
+          <a id="joinuslanding" class="btn px-5 rounded-pill py-2" href=""
+            >Join us today</a
+          >
+          <br />
+          <br />
+          <img style="width: 160px" src="/img/appstore.png" alt="" />
+          <img style="width: 160px" src="/img/googleplay.png" alt="" />
+        </div>
+        <div class="col-6 px-0" id="landingRight">
+          <br />
+          <br />
+          <img class="w-100 px-1" src="/img/exercise.png" alt="" />
+        </div>
+      </div>
+      <div style="height: 160px"></div>
+      <div class="" style="background: #324a5e; padding-left: 80px">
+        <div class="row">
+          <div class="col-7" style="margin-top: -100px">
+            <div class="row">
+              <div class="col-6 px-4">
+                <img class="w-100" src="/img/step1.png" alt="" />
+              </div>
+              <div class="col-6 px-4">
+                <img class="w-100" src="/img/step2.png" alt="" />
+              </div>
+            </div>
+          </div>
+          <div class="col-5">
+            <br />
+            <br />
+            <h3>
+              <span style="color: white">Simple Process. </span><br />
+              <span style="color: #b4fff6"> Convenient care.</span>
+            </h3>
+            <br />
+            <p style="font-size: 18px; color: white">
+              <span>&#10003;</span> Lorem ipsum dolor sit amet consectetur
+              adipisicing.
+            </p>
+            <p style="font-size: 18px; color: white">
+              <span>&#10003;</span> Lorem ipsum dolor sit amet
+            </p>
+            <p style="font-size: 18px; color: white">
+              <span>&#10003;</span> Lorem ipsum dolor sit amet consectetur .
+            </p>
+            <p style="font-size: 18px; color: white">
+              <span>&#10003;</span> sit amet consectetur adipisicing.
+            </p>
+          </div>
+        </div>
+        <div style="height: 100px"></div>
+      </div>
+    </div>
   </body>
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"
+  ></script>
 </html>
