--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -23,17 +27,14 @@
     <div id="navpc" class="fixed-top">
       <div class="container">
         <div class="row">
-          <div class="col-4">
+          <div class="col-6">
             <img src="/img/guido_logo.svg" id="navlogo" alt="" />
           </div>
-          <div class="col-8">
+          <div class="col-6">
             <div class="row">
-              <div class="col-9">
+              <div class="col-md-8">
                 <div id="navmenubox" class="rounded-pill text-center">
-                  <div class="mx-auto">
-                    <button class="mx-3 btn text-white" id="navitem">
-                      Behavioural psychology
-                    </button>
+                  <div class="mx-auto" id="">
                     <button class="mx-3 btn text-white" id="navitem">
                       Product 1
                     </button>
@@ -43,7 +44,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-3">
+              <div class="col-md-4" id="joinustop">
                 <div class="w-100 rounded-pill text-center" id="navjoinbtn">
                   <a class="btn" href="" id="joinusnav">Join us Today</a>
                 </div>
@@ -56,7 +57,7 @@
     <div id="navpc"></div>
     <div id="advice">
       <div class="container">
-        <p id="adviceText">
+        <p id="adviceText" class="py-2">
           Not investing in health today cuts into your future profit : that is
           how compounding works 😎
         </p>
@@ -67,16 +68,9 @@
       <br />
 
       <div class="row px-2">
-        <div class="col-6" id="landingLeft">
+        <div class="col-md-6" id="landingLeft">
           <img class="" style="width: 260px" src="/img/guido_logo.svg" alt="" />
-          <p
-            style="
-              font-size: 22px;
-              width: 84%;
-              font-weight: 400;
-              color: #747474;
-            "
-          >
+          <p id="guidotext">
             Guido is a healthy lifestyle program that Just Fits with your
             current lifestyle. It is the small incremental changes that we
             belive makes the largest differece in the long term.
@@ -96,29 +90,39 @@
           >
           <br />
           <br />
-          <img style="width: 160px" src="/img/appstore.png" alt="" />
-          <img style="width: 160px" src="/img/googleplay.png" alt="" />
+          <img
+            class="m-2"
+            style="width: 160px"
+            src="/img/appstore.png"
+            alt=""
+          />
+          <img
+            class="m-2"
+            style="width: 160px"
+            src="/img/googleplay.png"
+            alt=""
+          />
         </div>
-        <div class="col-6 px-0" id="landingRight">
+        <div class="col-md-6 px-0" id="landingRight">
           <br />
           <br />
           <img class="w-100 px-1" src="/img/exercise.png" alt="" />
         </div>
       </div>
       <div style="height: 160px"></div>
-      <div class="" style="background: #324a5e; padding-left: 80px">
+      <div id="stepsection" style="">
         <div class="row">
-          <div class="col-7" style="margin-top: -100px">
+          <div class="col-md-7" style="margin-top: -100px">
             <div class="row">
-              <div class="col-6 px-4">
+              <div class="col-md-6 px-5 my-2">
                 <img class="w-100" src="/img/step1.png" alt="" />
               </div>
-              <div class="col-6 px-4">
+              <div class="col-md-6 px-5 my-2">
                 <img class="w-100" src="/img/step2.png" alt="" />
               </div>
             </div>
           </div>
-          <div class="col-5">
+          <div class="col-md-5 px-4">
             <br />
             <br />
             <h3>
@@ -142,6 +146,346 @@
           </div>
         </div>
         <div style="height: 100px"></div>
+      </div>
+    </div>
+    <div class="container">
+      <br />
+      <br />
+      <h3 style="line-height: 42px; color: #324a5e">
+        Get Genuine Services <img class="ms-2" src="/img/apple.svg" alt="" />
+      </h3>
+      <br />
+      <br />
+      <div class="row">
+        <div class="col-md-3">
+          <div
+            class="text-center"
+            style="height: 500px; background: #d3e8d7; border-radius: 24px"
+          >
+            <br />
+            <br />
+            <div
+              class="mx-auto"
+              style="
+                height: 160px;
+                width: 160px;
+                border-radius: 100%;
+                background: #fff;
+                box-shadow: 0px 0px 20px rgba(41, 142, 62, 0.25);
+              "
+            >
+              <img src="/img/fame.png" id="serviceicon" alt="" />
+            </div>
+            <br />
+            <br />
+            <h1 class="" style="color: #225d4d">I</h1>
+            <br />
+            <p class="w-75 mx-auto" style="font-size: 24px; font-weight: 500">
+              Bespoke lessons for employees
+            </p>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div
+            class="text-center"
+            style="height: 500px; background: #e9eef8; border-radius: 24px"
+          >
+            <br />
+            <br />
+            <div
+              class="mx-auto"
+              style="
+                height: 160px;
+                width: 160px;
+                border-radius: 100%;
+                background: #fff;
+                box-shadow: 0px 0px 20px rgba(108, 141, 208, 0.25);
+              "
+            >
+              <img src="/img/workplace.png" id="serviceicon" alt="" />
+            </div>
+            <br />
+            <br />
+            <h1 class="" style="color: #6c8dd0">II</h1>
+            <br />
+            <p class="w-75 mx-auto" style="font-size: 24px; font-weight: 500">
+              Insights on how to structure their work environment
+            </p>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div
+            class="text-center"
+            style="height: 500px; background: #fef8e0; border-radius: 24px"
+          >
+            <br />
+            <br />
+            <div
+              class="mx-auto"
+              style="
+                height: 160px;
+                width: 160px;
+                border-radius: 100%;
+                background: #fff;
+                box-shadow: 0px 0px 20px rgba(250, 184, 25, 0.25);
+              "
+            >
+              <img src="/img/meal.svg" id="serviceicon" alt="" />
+            </div>
+            <br />
+            <br />
+            <h1 class="" style="color: #d66e4f">III</h1>
+            <br />
+            <p class="w-75 mx-auto" style="font-size: 24px; font-weight: 500">
+              Nutrition expert for everyone individually
+            </p>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div
+            class="text-center"
+            style="height: 500px; background: #fcdce9; border-radius: 24px"
+          >
+            <br />
+            <br />
+            <div
+              class="mx-auto"
+              style="
+                height: 160px;
+                width: 160px;
+                border-radius: 100%;
+                background: #fff;
+                box-shadow: 0px 0px 20px rgba(237, 21, 106, 0.25);
+              "
+            >
+              <img src="/img/mental.png" id="serviceicon" alt="" />
+            </div>
+            <br />
+            <br />
+            <h1 class="" style="color: #ed156a">IV</h1>
+            <br />
+            <p class="w-75 mx-auto" style="font-size: 24px; font-weight: 500">
+              Mental wellness expert
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <br />
+    <br />
+    <hr class="w-75 mx-auto my-0" />
+    <div class="container">
+      <br />
+      <br />
+      <h3 style="line-height: 42px; color: #324a5e">
+        Testimonials <img class="ms-2" src="/img/trophy.svg" alt="" />
+      </h3>
+      <br />
+      <br />
+      <div class="row">
+        <div class="col-md-6">
+          <div id="testimonyGIFbox">
+            <img
+              id="testimonyGIF"
+              src="/img/people.gif"
+              style="border-radius: 24px"
+              alt=""
+            />
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div id="testimonybox" style="">
+            <div class="row mx-0" style="padding-top: 20px">
+              <div class="col-6" style="height: 200px">
+                <div
+                  id="tesbox"
+                  class="h-100 w-100"
+                  style="border-radius: 24px; background: #d3e8d7"
+                >
+                  <p class="my-2" id="testimony" style="">
+                    <i
+                      class="fa fa-quote-left"
+                      style="
+                        font-size: 24px;
+                        color: #324a5ea8;
+                        margin-right: 8px;
+                      "
+                    ></i>
+                    Lorem Ipsum is simply dummy text of the printing and
+                    typesetting industry.
+                  </p>
+                  <p id="testimonyGiver" style="color: #324a5e">
+                    <b>Firstname Surname</b>
+                  </p>
+                </div>
+              </div>
+              <div class="col-6" style="height: 200px">
+                <div
+                  id="tesbox"
+                  class="h-100 w-100"
+                  style="border-radius: 24px; background: #e9eef8"
+                >
+                  <p class="my-2" id="testimony" style="">
+                    <i
+                      class="fa fa-quote-left"
+                      style="
+                        font-size: 24px;
+                        color: #324a5ea8;
+                        margin-right: 8px;
+                      "
+                    ></i>
+                    Lorem Ipsum is simply dummy text of the printing and
+                    typesetting industry.
+                  </p>
+                  <p id="testimonyGiver" style="color: #324a5e">
+                    <b>Firstname Surname</b>
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="row mx-0" style="padding-top: 40px">
+              <div class="col-6" style="height: 200px">
+                <div
+                  id="tesbox"
+                  class="h-100 w-100"
+                  style="border-radius: 24px; background: #fef8e0"
+                >
+                  <p class="my-2" id="testimony" style="">
+                    <i
+                      class="fa fa-quote-left"
+                      style="
+                        font-size: 24px;
+                        color: #324a5ea8;
+                        margin-right: 8px;
+                      "
+                    ></i>
+                    Lorem Ipsum is simply dummy text of the printing and
+                    typesetting industry.
+                  </p>
+                  <p id="testimonyGiver" style="color: #324a5e">
+                    <b>Firstname Surname</b>
+                  </p>
+                </div>
+              </div>
+              <div class="col-6" style="height: 200px">
+                <div
+                  id="tesbox"
+                  class="h-100 w-100"
+                  style="border-radius: 24px; background: #fcdce9"
+                >
+                  <p class="my-2" id="testimony" style="">
+                    <i
+                      class="fa fa-quote-left"
+                      style="
+                        font-size: 24px;
+                        color: #324a5ea8;
+                        margin-right: 8px;
+                      "
+                    ></i>
+                    Lorem Ipsum is simply dummy text of the printing and
+                    typesetting industry.
+                  </p>
+                  <p id="testimonyGiver" style="color: #324a5e">
+                    <b>Firstname Surname</b>
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <div style="height: 30px; background: #6c8dd0"></div>
+    <div style="background: #edffff">
+      <div class="container">
+        <br />
+        <br />
+        <img style="width: 260px" src="/img/guido_logo.svg" alt="" />
+        <br />
+        <div class="row">
+          <div class="col-md-6">
+            <p style="font-size: 18px; color: #324a5e">
+              Not investing in health today cuts into your future profit : that
+              is how compounding works 😎
+            </p>
+            <br />
+            <img
+              class="m-2"
+              style="width: 160px"
+              src="/img/appstore.png"
+              alt=""
+            />
+            <img
+              class="m-2"
+              style="width: 160px"
+              src="/img/googleplay.png"
+              alt=""
+            />
+            <br />
+            <br />
+          </div>
+          <div class="col-md-3">
+            <p>
+              <a
+                class="btn py-0 my-0"
+                style="font-weight: 600; color: #324a5e"
+                href=""
+                >About Logy.ai</a
+              >
+            </p>
+            <p>
+              <a
+                class="btn py-0 my-0"
+                style="font-weight: 600; color: #324a5e"
+                href=""
+                >Support</a
+              >
+            </p>
+            <p>
+              <a
+                class="btn py-0 my-0"
+                style="font-weight: 600; color: #324a5e"
+                href=""
+                >Careers</a
+              >
+            </p>
+          </div>
+          <div class="col-md-3">
+            <p>
+              <a
+                class="btn py-0 my-0"
+                style="font-weight: 600; color: #324a5e"
+                href=""
+                >Contact Business</a
+              >
+            </p>
+            <p>
+              <a
+                class="btn py-0 my-0"
+                style="font-weight: 600; color: #324a5e"
+                href=""
+                >Privacy policy</a
+              >
+            </p>
+            <p>
+              <a
+                class="btn py-0 my-0"
+                style="font-weight: 600; color: #324a5e"
+                href=""
+                >T & C</a
+              >
+            </p>
+          </div>
+        </div>
+        <br />
+        <br />
+        <br />
       </div>
     </div>
   </body>
