--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
     <title>Document</title>
   </head>
   <body>
-    <div id="navpc" class="fixed-top">
-      <div class="container">
-        <div class="row">
-          <div class="col-6">
+    <div id="navpc" class="mx-0 fixed-top">
+      <div class="container px-0">
+        <div class="row mx-0">
+          <div class="col-6 pe-0">
             <img src="/img/guido_logo.svg" id="navlogo" alt="" />
           </div>
-          <div class="col-6">
-            <div class="row">
+          <div class="col-6 p-0">
+            <div class="row mx-0">
               <div class="col-md-8">
                 <div id="navmenubox" class="rounded-pill text-center">
                   <div class="mx-auto" id="">
@@ -54,7 +54,7 @@
         </div>
       </div>
     </div>
-    <div id="navpc"></div>
+    <div id="navpc" class="mx-0"></div>
     <div id="advice">
       <div class="container">
         <p id="adviceText" class="py-2">
@@ -67,10 +67,10 @@
       <br />
       <br />
 
-      <div class="row px-2">
-        <div class="col-md-6" id="landingLeft">
+      <div class="row mx-0 ps-2 pe-0">
+        <div class="col-md-6 pe-0" id="landingLeft">
           <img class="" style="width: 260px" src="/img/guido_logo.svg" alt="" />
-          <p id="guidotext">
+          <p class="m-0 me-0" id="guidotext">
             Guido is a healthy lifestyle program that Just Fits with your
             current lifestyle. It is the small incremental changes that we
             belive makes the largest differece in the long term.
@@ -106,14 +106,14 @@
         <div class="col-md-6 px-0" id="landingRight">
           <br />
           <br />
-          <img class="w-100 px-1" src="/img/exercise.png" alt="" />
+          <img class="w-100 px-1 pe-0" src="/img/exercise.png" alt="" />
         </div>
       </div>
       <div style="height: 160px"></div>
       <div id="stepsection" style="">
-        <div class="row">
-          <div class="col-md-7" style="margin-top: -100px">
-            <div class="row">
+        <div class="row mx-0">
+          <div class="col-md-7 pe-0" style="margin-top: -100px">
+            <div class="row mx-0">
               <div class="col-md-6 px-5 my-2">
                 <img class="w-100" src="/img/step1.png" alt="" />
               </div>
@@ -122,27 +122,29 @@
               </div>
             </div>
           </div>
-          <div class="col-md-5 px-4">
-            <br />
-            <br />
-            <h3>
-              <span style="color: white">Simple Process. </span><br />
-              <span style="color: #b4fff6"> Convenient care.</span>
-            </h3>
-            <br />
-            <p style="font-size: 18px; color: white">
-              <span>&#10003;</span> Lorem ipsum dolor sit amet consectetur
-              adipisicing.
-            </p>
-            <p style="font-size: 18px; color: white">
-              <span>&#10003;</span> Lorem ipsum dolor sit amet
-            </p>
-            <p style="font-size: 18px; color: white">
-              <span>&#10003;</span> Lorem ipsum dolor sit amet consectetur .
-            </p>
-            <p style="font-size: 18px; color: white">
-              <span>&#10003;</span> sit amet consectetur adipisicing.
-            </p>
+          <div class="col-md-5 pe-0">
+            <div class="w-100">
+              <br />
+              <br />
+              <h3>
+                <span style="color: white">Simple Process. </span><br />
+                <span style="color: #b4fff6"> Convenient care.</span>
+              </h3>
+              <br />
+              <p style="font-size: 18px; color: white">
+                <span>&#10003;</span> Lorem ipsum dolor sit amet consectetur
+                adipisicing.
+              </p>
+              <p style="font-size: 18px; color: white">
+                <span>&#10003;</span> Lorem ipsum dolor sit amet
+              </p>
+              <p style="font-size: 18px; color: white">
+                <span>&#10003;</span> Lorem ipsum dolor sit amet consectetur .
+              </p>
+              <p style="font-size: 18px; color: white">
+                <span>&#10003;</span> sit amet consectetur adipisicing.
+              </p>
+            </div>
           </div>
         </div>
         <div style="height: 100px"></div>
