--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
       <br />
       <br />
 
-      <div class="row mx-0 ps-2 pe-0">
-        <div class="col-md-6 pe-0" id="landingLeft">
+      <div class="row mx-0 px-0">
+        <div class="col-md-6 px-3" id="landingLeft">
           <img class="" style="width: 260px" src="/img/guido_logo.svg" alt="" />
           <p class="m-0 me-0" id="guidotext">
             Guido is a healthy lifestyle program that Just Fits with your
@@ -76,15 +76,17 @@
             belive makes the largest differece in the long term.
           </p>
           <p
+            class="p-0 m-0"
             style="
               font-size: 22px;
               width: 84%;
-              font-weight: 400;
-              color: #000000;
+              font-weight: 700;
+              color: #ff00dd;
             "
           >
             Invest in your health with us: Happy Investing
           </p>
+          <br />
           <a id="joinuslanding" class="btn px-5 rounded-pill py-2" href=""
             >Join us today</a
           >
@@ -112,7 +114,7 @@
       <div style="height: 160px"></div>
       <div id="stepsection" style="">
         <div class="row mx-0">
-          <div class="col-md-7 pe-0" style="margin-top: -100px">
+          <div class="col-md-7 px-0" style="margin-top: -100px">
             <div class="row mx-0">
               <div class="col-md-6 px-5 my-2">
                 <img class="w-100" src="/img/step1.png" alt="" />
@@ -161,7 +163,7 @@
       <div class="row">
         <div class="col-md-3">
           <div
-            class="text-center"
+            class="text-center my-2"
             style="height: 500px; background: #d3e8d7; border-radius: 24px"
           >
             <br />
@@ -189,7 +191,7 @@
         </div>
         <div class="col-md-3">
           <div
-            class="text-center"
+            class="text-center my-2"
             style="height: 500px; background: #e9eef8; border-radius: 24px"
           >
             <br />
@@ -217,7 +219,7 @@
         </div>
         <div class="col-md-3">
           <div
-            class="text-center"
+            class="text-center my-2"
             style="height: 500px; background: #fef8e0; border-radius: 24px"
           >
             <br />
@@ -245,7 +247,7 @@
         </div>
         <div class="col-md-3">
           <div
-            class="text-center"
+            class="text-center my-2"
             style="height: 500px; background: #fcdce9; border-radius: 24px"
           >
             <br />
