--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             belive makes the largest differece in the long term.
           </p>
           <p
-            class="p-0 m-0"
+            class="p-0 m-0 gradient-text"
             style="
               font-size: 22px;
               width: 84%;
@@ -84,7 +84,7 @@
               color: #ff00dd;
             "
           >
-            Invest in your health with us: Happy Investing
+            Invest in your health with us : Happy Investing
           </p>
           <br />
           <a id="joinuslanding" class="btn px-5 rounded-pill py-2" href=""
