--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <br />
 
       <div class="row mx-0 px-0">
-        <div class="col-md-6 px-3" id="landingLeft">
+        <div class="col-md-6" id="landingLeft">
           <img class="" style="width: 260px" src="/img/guido_logo.svg" alt="" />
           <p class="m-0 me-0" id="guidotext">
             Guido is a healthy lifestyle program that Just Fits with your
