--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
           />
         </div>
         <div class="col-md-6 px-0" id="landingRight">
-          <br />
+          <br id="mobnotbr" />
           <br />
           <img class="w-100 px-1 pe-0" src="/img/exercise.png" alt="" />
         </div>
@@ -149,16 +149,16 @@
             </div>
           </div>
         </div>
-        <div style="height: 100px"></div>
+        <div id="sizedBox" style=""></div>
       </div>
     </div>
     <div class="container">
+      <br id="mobnotbr" />
       <br />
-      <br />
-      <h3 style="line-height: 42px; color: #324a5e">
+      <h3 class="m-0" style="line-height: 42px; color: #324a5e">
         Get Genuine Services <img class="ms-2" src="/img/apple.svg" alt="" />
       </h3>
-      <br />
+      <br id="mobnotbr" />
       <br />
       <div class="row">
         <div class="col-md-3">
@@ -171,8 +171,8 @@
             <div
               class="mx-auto"
               style="
-                height: 160px;
-                width: 160px;
+                height: 180px;
+                width: 180px;
                 border-radius: 100%;
                 background: #fff;
                 box-shadow: 0px 0px 20px rgba(41, 142, 62, 0.25);
@@ -199,8 +199,8 @@
             <div
               class="mx-auto"
               style="
-                height: 160px;
-                width: 160px;
+                height: 180px;
+                width: 180px;
                 border-radius: 100%;
                 background: #fff;
                 box-shadow: 0px 0px 20px rgba(108, 141, 208, 0.25);
@@ -227,8 +227,8 @@
             <div
               class="mx-auto"
               style="
-                height: 160px;
-                width: 160px;
+                height: 180px;
+                width: 180px;
                 border-radius: 100%;
                 background: #fff;
                 box-shadow: 0px 0px 20px rgba(250, 184, 25, 0.25);
@@ -255,8 +255,8 @@
             <div
               class="mx-auto"
               style="
-                height: 160px;
-                width: 160px;
+                height: 180px;
+                width: 180px;
                 border-radius: 100%;
                 background: #fff;
                 box-shadow: 0px 0px 20px rgba(237, 21, 106, 0.25);
@@ -275,16 +275,16 @@
         </div>
       </div>
     </div>
-    <br />
+    <br id="mobnotbr" />
     <br />
     <hr class="w-75 mx-auto my-0" />
     <div class="container">
-      <br />
+      <br id="mobnotbr" />
       <br />
       <h3 style="line-height: 42px; color: #324a5e">
         Testimonials <img class="ms-2" src="/img/trophy.svg" alt="" />
       </h3>
-      <br />
+      <br id="mobnotbr" />
       <br />
       <div class="row">
         <div class="col-md-6">
@@ -401,10 +401,10 @@
     </div>
     <br />
     <br />
-    <br />
-    <br />
-    <br />
-    <br />
+    <br id="mobnotbr" />
+    <br id="mobnotbr" />
+    <br id="mobnotbr" />
+    <br id="mobnotbr" />
     <div style="height: 30px; background: #6c8dd0"></div>
     <div style="background: #edffff">
       <div class="container">
@@ -488,8 +488,8 @@
           </div>
         </div>
         <br />
-        <br />
-        <br />
+        <br id="mobnotbr" />
+        <br id="mobnotbr" />
       </div>
     </div>
   </body>
