--- a/index.html
+++ b/index.html
@@ -27,24 +27,21 @@
     <div id="navpc" class="mx-0 fixed-top">
       <div class="container px-0">
         <div class="row mx-0">
-          <div class="col-6 pe-0">
+          <div class="col-7 pe-0">
             <img src="/img/guido_logo.svg" id="navlogo" alt="" />
           </div>
-          <div class="col-6 p-0">
+          <div class="col-5 p-0">
             <div class="row mx-0">
-              <div class="col-md-8">
+              <div class="col-md-6">
                 <div id="navmenubox" class="rounded-pill text-center">
                   <div class="mx-auto" id="">
-                    <button class="mx-3 btn text-white" id="navitem">
-                      Product 1
-                    </button>
                     <button class="mx-3 btn text-white" id="navitem">
                       Support
                     </button>
                   </div>
                 </div>
               </div>
-              <div class="col-md-4" id="joinustop">
+              <div class="col-md-6" id="joinustop">
                 <div class="w-100 rounded-pill text-center" id="navjoinbtn">
                   <a class="btn" href="" id="joinusnav">Join us Today</a>
                 </div>
@@ -69,6 +66,8 @@
 
       <div class="row mx-0 px-0">
         <div class="col-md-6" id="landingLeft">
+          <br id="mobnotbr" />
+          <br id="mobnotbr" />
           <img class="" style="width: 260px" src="/img/guido_logo.svg" alt="" />
           <p class="m-0 me-0" id="guidotext">
             Guido is a healthy lifestyle program that Just Fits with your
@@ -92,18 +91,6 @@
           >
           <br />
           <br />
-          <img
-            class="m-2"
-            style="width: 160px"
-            src="/img/appstore.png"
-            alt=""
-          />
-          <img
-            class="m-2"
-            style="width: 160px"
-            src="/img/googleplay.png"
-            alt=""
-          />
         </div>
         <div class="col-md-6 px-0" id="landingRight">
           <br id="mobnotbr" />
@@ -150,6 +137,47 @@
           </div>
         </div>
         <div id="sizedBox" style=""></div>
+      </div>
+    </div>
+    <div style="background: #6c8dd0" class="">
+      <div class="container text-center">
+        <br />
+        <br />
+        <br id="mobnotbr" />
+        <h3 class="text-white">Get unmatched service</h3>
+        <h1 class="text-white" style="font-weight: 700">100% online</h1>
+        <br />
+        <hr class="w-75 mx-auto" style="background: white" />
+        <br />
+        <div class="row px-5">
+          <div class="col-md-4">
+            <br />
+            <img id="paraIcon" src="/img/user.svg" alt="" />
+            <br />
+            <br />
+            <p id="paraValue">85%</p>
+            <p id="parameters">Active users</p>
+          </div>
+          <div class="col-md-4">
+            <br />
+            <img id="paraIcon" src="/img/msg.svg" alt="" />
+            <br />
+            <br />
+            <p id="paraValue">959595</p>
+            <p id="parameters">Messages sent</p>
+          </div>
+          <div class="col-md-4">
+            <br />
+            <img id="paraIcon" src="/img/satisfaction.svg" alt="" />
+            <br />
+            <br />
+            <p id="paraValue">99%</p>
+            <p id="parameters">Satisfaction score</p>
+          </div>
+        </div>
+        <br />
+        <br />
+        <br id="mobnotbr" />
       </div>
     </div>
     <div class="container">
