--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
             class="text-center my-2"
             style="height: 500px; background: #d3e8d7; border-radius: 24px"
           >
-            <div class="bg-dark" style="border-radius: 24px">
+            <div class="" style="border-radius: 24px; background: #225d4d">
               <br />
               <br />
               <div
@@ -235,7 +235,7 @@
             class="text-center my-2"
             style="height: 500px; background: #e9eef8; border-radius: 24px"
           >
-            <div class="bg-dark" style="border-radius: 24px">
+            <div class="" style="border-radius: 24px; background: #6c8dd0">
               <br />
               <br />
               <div
@@ -276,7 +276,7 @@
             class="text-center my-2"
             style="height: 500px; background: #fef8e0; border-radius: 24px"
           >
-            <div class="bg-dark" style="border-radius: 24px">
+            <div class="" style="border-radius: 24px; background: #d66e4f">
               <br />
               <br />
               <div
@@ -317,7 +317,7 @@
             class="text-center my-2"
             style="height: 500px; background: #fcdce9; border-radius: 24px"
           >
-            <div class="bg-dark" style="border-radius: 24px">
+            <div class="" style="border-radius: 24px; background: #ed156a">
               <br />
               <br />
               <div
@@ -499,18 +499,16 @@
               is how compounding works 😎
             </p>
             <br />
-            <img
-              class="m-2"
-              style="width: 160px"
-              src="/img/appstore.png"
-              alt=""
-            />
-            <img
-              class="m-2"
-              style="width: 160px"
-              src="/img/googleplay.png"
-              alt=""
-            />
+            <h4 style="line-height: 48px">
+              Our Chat-Bot is live on
+              <a href=""
+                ><img
+                  class="mx-2"
+                  style="height: 32px"
+                  src="/img/whatsapp.svg"
+                  alt=""
+              /></a>
+            </h4>
             <br />
             <br />
           </div>
