--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
                         ipsum</b
                       >
                     </p>
-                    <div class="progress my-2">
+                    <div class="progress my-2 w-50" style="height: 4px">
                       <div
                         class="progress-bar"
                         role="progressbar"
@@ -492,7 +492,7 @@
                         ipsum</b
                       >
                     </p>
-                    <div class="progress my-2">
+                    <div class="progress my-2 w-50" style="height: 4px">
                       <div
                         class="progress-bar"
                         role="progressbar"
@@ -550,7 +550,7 @@
                         ipsum</b
                       >
                     </p>
-                    <div class="progress my-2">
+                    <div class="progress my-2 w-50" style="height: 4px">
                       <div
                         class="progress-bar"
                         role="progressbar"
@@ -608,7 +608,7 @@
                         ipsum</b
                       >
                     </p>
-                    <div class="progress my-2">
+                    <div class="progress my-2 w-50" style="height: 4px">
                       <div
                         class="progress-bar"
                         role="progressbar"
