--- a/index.html
+++ b/index.html
@@ -101,7 +101,8 @@
         <div class="col-md-6 px-0" id="landingRight">
           <br id="mobnotbr" />
           <br />
-          <img class="w-100 px-1 pe-0" src="/img/pose.png" alt="" />
+          <img id="pose" class="w-100 px-1 pe-0" src="/img/pose.png" alt="" />
+          <img id="pose2" class="w-100 px-0 pe-0" src="/img/pose2.png" alt="" />
         </div>
       </div>
       <div style="height: 160px"></div>
